Fixed too big console and added jpeg

--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ div.content {
 
 div.left-pane {
 	width: 25%;
-	height: 543px;
+	height: 370px;
 	position: absolute;
 	border-right-style: solid;
 }
@@ -49,7 +49,7 @@ div.left-pane {
 
 div.right-pane {
 	width: 66%;
-	height: 530px;
+	height: 358px;
 	position: relative;
 	left: 34%;
 }
